testsuite/tests/properties/invalid_predicate_error/non_entity.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}

@abstract
class FooNode implements Node[FooNode] {
    @predicate_error("msg: $n")
    fun pred(n: Example): Bool = false
}

class Example: FooNode implements TokenNode {
    var: LogicVar

    fun equation(): Equation =
        self.var <- null[Entity[Example]]
        %and {
            bind error_location = node;
            FooNode.pred%(self.var, node)
        }

    @exported
    fun run_solver(): Bool = self.equation().solve()
}
